--- a/mystyle.sty
+++ b/mystyle.sty
@@ -64,6 +64,7 @@
 % Fonts
 \newcommand{\category}[1]{\mathcal{#1}}
 \newcommand{\catname}[1]{\mathbf{#1}}
+\newcommand{\marked}[1]{\mathbf{#1}}
 % General
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\C}{\mathbb{C}}
