--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt]{scrartcl}
+\documentclass[a4paper]{article}
 
 \usepackage{mystyle}
 \usepackage{subfiles}
@@ -6,7 +6,7 @@
 %bibliography location
 \addbibresource{sources.bib}
 
-\title{Complete Segal spaces of spans}
+\title{Complete Segal Spaces of Spans}
 \author{Angus Rush}
 
 \begin{document}
