--- a/sources.bib
+++ b/sources.bib
@@ -51,6 +51,16 @@
   Title  = {Notes on Higher Categories},
 }
 
+@article{rezk2001model,
+  title={A model for the homotopy theory of homotopy theory},
+  author={Rezk, Charles},
+  journal={Transactions of the American Mathematical Society},
+  volume={353},
+  number={3},
+  pages={973--1007},
+  year={2001}
+}
+
 @Article{Joyal2006,
   author      = {Andre Joyal and Myles Tierney},
   date        = {2006-07-31},
@@ -61,6 +71,22 @@
   abstract    = {We show that complete Segal spaces and Segal categories are Quillen equivalent to quasi-categories.},
   file        = {:http\://arxiv.org/pdf/math/0607820v2:PDF},
   keywords    = {math.AT, 55U35;18G30;18G55},
+}
+
+@ARTICLE{rasekhcartesianfibrations,
+  author = {{Rasekh}, Nima},
+  title = "{Cartesian Fibrations and Representability}",
+  journal = {arXiv e-prints},
+  keywords = {Mathematics - Category Theory, Mathematics - Algebraic Topology},
+  year = 2017,
+  month = nov,
+  eid = {arXiv:1711.03670},
+  pages = {arXiv:1711.03670},
+  archivePrefix = {arXiv},
+  eprint = {1711.03670},
+  primaryClass = {math.CT},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/2017arXiv171103670R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
