I shouldn't be using github as backup.

--- a/mystyle.sty
+++ b/mystyle.sty
@@ -31,6 +31,8 @@
 \usepackage{epigraph}
 %\usepackage[bbgreekl]{mathbbol}
 \usepackage{mathtools}
+\usepackage{rotating}
+\usepackage{caption}
 
 \usetikzlibrary{decorations.markings}
 
