--- a/sources.bib
+++ b/sources.bib
@@ -89,4 +89,21 @@
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2016arXiv160500706B,
+  author = {{Boavida de Brito}, Pedro},
+  title = "{Segal objects and the Grothendieck construction}",
+  journal = {arXiv e-prints},
+  keywords = {Mathematics - Algebraic Topology},
+  year = 2016,
+  month = may,
+  eid = {arXiv:1605.00706},
+  pages = {arXiv:1605.00706},
+  archivePrefix = {arXiv},
+  eprint = {1605.00706},
+  primaryClass = {math.AT},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/2016arXiv160500706B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @Comment{jabref-meta: databaseType:biblatex;}
